fix minimap navigator in wrong position in safari and firefox (#1155)

--- a/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.scss
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.scss
@@ -7,7 +7,7 @@
 
 .texera-mini-map-navigator {
   border: 1px solid #797A79;
-  position: fixed;
+  position: absolute;
   pointer-events: all;
   cursor: move;
   z-index: 1001;
